# wildcat

./: .gitattributes  .gitignore  .gitmodules  .uncrustify  CMakeLists.txt  README.md  statistics.sh
components/Core/: CMakeLists.txt
components/Core/include/Core/: MainWindow
components/Core/resource/: Core.xml
components/Core/source/: MainWindow.hpp  component.cpp
components/Core/source/Auxiliary/: Visibility.hpp
components/Core/source/Private/: BasicMainWindow.cpp  BasicMainWindow.hpp
components/Domain/: CMakeLists.txt
components/Domain/include/Domain/: CurveType  CurveTypeAccess  DataAccessFactory  Dimensions  Log  LogParameter  LogParameterAccess  LogParameterGroup  LogParameterGroupAccess  UnitAccess  Well  WellAccess  WellTraitAccess
components/Domain/source/: CurveType.cpp  CurveType.hpp  CurveTypeAccess.hpp  DataAccessFactory.hpp  Dimensions.cpp  Dimensions.hpp  Log.cpp  Log.hpp  LogAccess.hpp  LogParameter.hpp  LogParameterAccess.hpp  LogParameterGroup.hpp  LogParameterGroupAccess.hpp  NArray.hpp  NArraySerializer.hpp  Unit.cpp  Unit.hpp  UnitAccess.hpp  Well.cpp  Well.hpp  WellAccess.hpp  WellTrait.cpp  WellTrait.hpp  WellTraitAccess.hpp  WellTraitValue.hpp
components/Domain/source/Auxiliary/: Assert.hpp  Exception.hpp  ExecutionControl.hpp  Logging.hpp
components/Domain/source/Odb/: CurveTypeAccess.cpp  CurveTypeAccess.hpp  DataAccessFactory.hpp  LogAccess.cpp  LogAccess.hpp  LogParameterAccess.cpp  LogParameterAccess.hpp  UnitAccess.cpp  UnitAccess.hpp  WellAccess.cpp  WellAccess.hpp  WellTraitAccess.cpp  WellTraitAccess.hpp
components/Import/: CMakeLists.txt
components/Import/include/Las/: LasFile  LasFileParser
components/Import/resource/: Import.xml
components/Import/source/: ImportController.cpp  ImportController.hpp  ImportDialog.cpp  ImportDialog.hpp  ImportTreeLasFileModel.cpp  ImportTreeLasFileModel.hpp  ImportTreeModel.cpp  ImportTreeModel.hpp  ImportUiFactory.cpp  ImportUiFactory.hpp  ImportWidget.cpp  ImportWidget.hpp  LasFile.cpp  LasFile.hpp  LasFileParser.cpp  LasFileParser.hpp  UIFactory.cpp  UIFactory.hpp  component.cpp
components/Import/source/Auxiliary/: Assert.hpp  Exception.hpp  ExecutionControl.hpp  Logging.hpp  Visibility.hpp
components/Import/source/Gui/: ImportTreeItemDelegate.cpp  ImportTreeItemDelegate.hpp  ImportWidget.cpp  ImportWidget.hpp  LasWidget.cpp  LasWidget.hpp  MenuFactory.hpp
components/Import/source/Las/: ImportTreeWrapperEntry.hpp  ImportTreeWrapperLasFile.cpp  ImportTreeWrapperLasFile.hpp  ImportTreeWrapperLogGroup.cpp  ImportTreeWrapperLogGroup.hpp  ImportTreeWrapperParameters.hpp  ImportTreeWrapperWellInformation.cpp  ImportTreeWrapperWellInformation.hpp  LasFile.cpp  LasFile.hpp  LasFileParser.cpp  LasFileParser.hpp
components/Import/tests/: ImportLasTest.cpp
components/Tests/: CMakeLists.txt
components/Tests/source/: main.cpp
components/Widgets/: CMakeLists.txt
components/Widgets/include/Widgets/: KeywordWidget
components/Widgets/resource/: Widgets.xml
components/Widgets/source/: ConnectionSettingsWidget.hpp  FlowLayout.cpp  FlowLayout.hpp  KeywordWidget.cpp  KeywordWidget.hpp  component.cpp
components/Widgets/source/Implementation/: ConnectionSettingsWidget.cpp
modules/Application/: CMakeLists.txt
modules/Application/source/: Application.cpp  Application.hpp  main.cpp
modules/Application/source/Auxiliary/: Exception.hpp
modules/Core/: CMakeLists.txt
modules/Core/include/Core/: IMainWindow
modules/Core/resource/: Core.json
modules/Core/source/: BasicMainWindow.cpp  BasicMainWindow.hpp  CoreExport.hpp  IMainWindow.hpp  MainWindow.hpp  component.cpp
modules/Core/source/Auxiliary/: Assert.hpp  Exception.hpp  ExecutionControl.hpp  Logging.hpp  Visibility.hpp
modules/Database/: CMakeLists.txt
modules/Database/resource/: Database.json
modules/Database/source/: DatabaseController.cpp  DatabaseController.hpp  DatabaseUiFactory.cpp  DatabaseUiFactory.hpp  Export.hpp  component.cpp
modules/Database/source/Auxiliary/: Visibility.hpp
modules/Database/source/Connections/: Connection.cpp  (+13 more)
modules/Domain/: CMakeLists.txt
modules/Domain/source/: CurveType.cpp  CurveType.hpp  CurveTypeAccess.hpp  DataAccessFactory.hpp  Dimensions.cpp  Dimensions.hpp  Log.hpp  LogAccess.hpp  LogParameter.hpp  LogParameterAccess.hpp  LogParameterGroup.hpp  LogParameterGroupAccess.hpp  NArray.hpp  NArraySerializer.hpp  Unit.hpp  UnitAccess.hpp  Well.cpp  Well.hpp  WellAccess.hpp  WellTrait.cpp  WellTrait.hpp  WellTraitAccess.hpp  WellTraitValue.hpp
modules/Import/: CMakeLists.txt
modules/Import/docs/: LAS.md
modules/Import/resource/: Import.json  Import.xml
modules/Import/source/: Export.hpp  ImportController.cpp  ImportController.hpp  ImportTreeModel.cpp  ImportTreeModel.hpp  ImportUiFactory.cpp  ImportUiFactory.hpp  component.cpp
modules/Import/tests/: ImportLasTest.cpp
modules/LogViewer/: CMakeLists.txt
modules/LogViewer/resource/: LogViewer.json
modules/LogViewer/source/: Export.hpp  LogViewerController.cpp  LogViewerController.hpp  LogViewerUiFactory.cpp  LogViewerUiFactory.hpp  LogViewerWidget.cpp  LogViewerWidget.hpp  component.cpp
modules/Models/: CMakeLists.txt
modules/Models/resource/: Models.json  Models.xml
modules/Models/source/: ConnectionEntry.cpp  ConnectionEntry.hpp  ConnectionListModel.cpp  ConnectionListModel.hpp  Export.hpp  component.cpp
modules/Tests/: CMakeLists.txt
modules/Tests/source/: main.cpp
modules/TypeSystem/: CMakeLists.txt
modules/TypeSystem/resource/: TypeSystem.json
modules/TypeSystem/source/: Export.hpp  TypeSystemController.cpp  TypeSystemController.hpp  TypeSystemUiFactory.cpp  TypeSystemUiFactory.hpp  component.cpp
modules/Widgets/: CMakeLists.txt
modules/Widgets/resource/: Widgets.json
modules/Widgets/source/: ConnectionDrivenWidget.cpp  ConnectionDrivenWidget.hpp  ConnectionSettingsWidget.cpp  ConnectionSettingsWidget.hpp  Export.hpp  FlowLayout.cpp  FlowLayout.hpp  IConnectionDrivenWidget.hpp  IConnectionSettingsWidget.hpp  IKeywordWidget.hpp  KeywordWidget.cpp  KeywordWidget.hpp  component.cpp
(+472 files in other folders)
